; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/extr_virmidi.c_snd_virmidi_unregister_all.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/extr_virmidi.c_snd_virmidi_unregister_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@devices = common dso_local global i32* null, align 8
@snd_virmidi_driver = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @snd_virmidi_unregister_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_virmidi_unregister_all() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %14, %0
  %3 = load i32, i32* %1, align 4
  %4 = load i32*, i32** @devices, align 8
  %5 = call i32 @ARRAY_SIZE(i32* %4)
  %6 = icmp slt i32 %3, %5
  br i1 %6, label %7, label %17

7:                                                ; preds = %2
  %8 = load i32*, i32** @devices, align 8
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32, i32* %8, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @platform_device_unregister(i32 %12)
  br label %14

14:                                               ; preds = %7
  %15 = load i32, i32* %1, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %1, align 4
  br label %2

17:                                               ; preds = %2
  %18 = call i32 @platform_driver_unregister(i32* @snd_virmidi_driver)
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @platform_device_unregister(i32) #1

declare dso_local i32 @platform_driver_unregister(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
